kubernetes/apps/media/plex/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: "true"
      containers:
        - name: app
          image: ghcr.io/home-operations/plex:1.43.4.10903@sha256:fdc6fe82bc7d8acd08fc0aa581fcb76722803ba5905e2537135a697347dd6149
          ports:
            - name: http
              containerPort: 32400
          startupProbe:
            tcpSocket:
              port: 32400
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              gpu.intel.com/i915: "1"
              cpu: 4000m
              memory: 8Gi
            limits:
              gpu.intel.com/i915: "1"
              memory: 12Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmpfs
              mountPath: /config/Library/Application Support/Plex Media Server/Logs
              subPath: logs
            - name: tmpfs
              mountPath: /transcode
              subPath: transcode
            - name: tmpfs
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: tmpfs
          emptyDir: {}
