kubernetes/apps/media/plex/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    lbipam.cilium.io/ips: "10.0.30.34"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 32400
      targetPort: 32400
      protocol: TCP
