kubernetes/apps/media/plex/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://plex.media.svc.cluster.local:32400/
      conditions:
        - "[STATUS] == 401"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - plex.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /library/streams
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove: ["Range"]
      backendRefs:
        - name: plex
          port: 32400
    - backendRefs:
        - name: plex
          port: 32400
